--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>Hello Coursera! <br> ထပ်ဖြည့် It's a great course!</h1>
 </body>
 </html>
