Small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 <h1>Hello Coursera! <br> ထပ်ဖြည့် It's a great course!</h1>
+<p>browser-sync start --server --directory --files "*" (လုပ်ပြီးနောက်ထပ်ထည့်သည်။) sublime text 3 မှာ ကုတ်တွေကို ပြင်ပြီး save လုပ်လိုက်တာနဲ့ Browser ကို Refresh လုပ်စရာမလိုဘဲ စာတွေ ပြောင်းသွားတယ်။</p>
 </body>
 </html>
